# ftdi

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  vendor-ftd2xx.cmake  vendor-libftdi.cmake  vendor.cmake
ftd2xx/: CMakeLists.txt
include/firm/ftdi/: uart.hpp
src/: break-test.cpp  uart.cpp
